<resources>
    <string name="app_name">MusicRadio</string>
    
    <!--Login-->
    <string name="btn_phone">手机号登录</string>
    <string name="btn_register">注册</string>
    <string name="visitors_use">游客使用>>></string>
    <string name="edit_phone">请输入手机号码</string>
    <string name="edit_pwd">请输入密码</string>
    <string name="weixin">微信</string>
    <string name="QQ">QQ</string>
    <string name="xlwb">新浪微博</string>
    <string name="wyyx">网易邮箱</string>

    <!--标题-->
    <string name="title_phoneLoagin">手机号登录</string>
    <string name="title_phoneRegister">手机号注册</string>

    <!--抽屉菜单-->
    <string name="sign_in">签到</string>
    <string name="member_center">会员中心</string>
    <string name="timed_shutdown">定时关闭</string>
    <string name="shazam_encore">听歌识曲</string>
    <string name="sound_effect_setting">音效设置</string>
    <string name="music_clock">音乐闹钟</string>
    <string name="scan">扫一扫</string>
    <string name="unicom_free_flow">联通免流量</string>
    <string name="help">帮助中心</string>
    <string name="feedback">意见反馈</string>
    
    <!--register-->
    <string name="edit_setPwd">设置登录密码，不少于6位</string>
    
    <!--首页-->

    <string name="today_song">今日推荐</string>
    <string name="original_music">原创音乐</string>
    <string name="special_topic">音乐专题</string>
    <string name="index">首页</string>
    <string name="songs">歌单</string>
    <string name="ranking">排行榜</string>
    <string name="radio_station">电台</string>
    
</resources>
