<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/title_view"
        layout="@layout/title" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="134dp"
        android:drawableLeft="@mipmap/pwd"
        android:drawablePadding="5dp"
        android:hint="@string/edit_setPwd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="#AAAAAA" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@mipmap/phone"
        android:drawablePadding="5dp"
        android:hint="@string/edit_phone"
        android:inputType="phone"
        android:padding="10dp"

        android:singleLine="true"
        android:textColorHint="#AAAAAA" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="34dp"
        android:background="@color/red"
        android:text="下一步"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="---------其他注册方式-----------" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <TableRow>

                    <ImageView
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@mipmap/wx" />

                    <ImageView
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@mipmap/qq" />

                    <ImageView
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@mipmap/xl" />

                    <ImageView
                        android:layout_height="45dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@mipmap/wy" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weixin" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/QQ" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/xlwb" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/wyyx" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>