<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!--轮播图-->
        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <!--三个子菜单-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="@dimen/menu_img_width"
                android:layout_height="@dimen/menu_img_height"
                android:layout_weight="1"
                android:onClick="onClick"
                android:id="@+id/index_recommendToday_btn"
                android:src="@mipmap/tuijian" />

            <ImageView
                android:layout_width="@dimen/menu_img_width"
                android:layout_height="@dimen/menu_img_height"
                android:layout_weight="1"
                android:onClick="onClick"
                android:src="@mipmap/aaa"
                android:id="@+id/index_original_btn" />

            <ImageView
                android:layout_width="@dimen/menu_img_width"
                android:layout_height="@dimen/menu_img_height"
                android:layout_weight="1"
                android:onClick="onClick"
                android:id="@+id/index_musicSpecial_btn"
                android:src="@mipmap/special_topic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/today_song"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/original_music"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/special_topic"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cut_off_rule" />

        <ListView
            android:id="@+id/index_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

    </LinearLayout>
</ScrollView>
