<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_phone"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/login_shape"
            android:text="@string/btn_phone"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn_register"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_shape"
            android:text="@string/btn_register"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tourist_trial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/visitors_use" />
    </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="---------其他登录方式-----------" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <TableRow>

                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/wx" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@mipmap/qq" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@mipmap/xl" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@mipmap/wy" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="微信" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="QQ" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="新浪微博" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="网易邮箱" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>